# python-fast-api

./: .env  Dockerfile  README.MD  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/db/: models.py
app/migrations/: env.py
app/migrations/versions/: 09d2aebab60c_add.py  eef7e429ebe2_add_category_table.py
app/routes/: category_routes.py  deps.py  product_routes.py
app/schemas/: base.py  category.py  product.py
app/services/: dynamodb_service.py
app/test/: conftest.py
app/test/routes/: test_category_routes.py  test_product_routes.py
app/test/schemas/: test_category_schema.py  test_product_schema.py
app/test/use_cases/: test_category_use_cases.py  test_product_use_cases.py
app/use_cases/: category.py  product.py
