[tool.poetry]
name = "project-products"
version = "0.1.0"
description = ""
authors = ["lucasbz97"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
pytest = "^8.3.2"
alembic = "^1.13.2"
python-decouple = "^3.8"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
